Add about; add fontawesome icons to articles

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,8 +10,20 @@ p {
   @apply mb-2;
 }
 
+.quicksand {
+  font-family: "Quicksand";
+}
+
+h1 {
+  @apply quicksand;
+}
+
 h2 {
-  @apply text-3xl my-2;
+  @apply text-3xl my-2 quicksand;
+}
+
+h3 {
+  @apply text-xl mt-3 mb-2;
 }
 
 pre {
@@ -19,5 +31,14 @@ pre {
 }
 
 body {
-  font-family: "Quicksand";
+  font-family: Arial, Helvetica, sans-serif;
+  @apply text-gray-800;
+}
+
+ol {
+  @apply list-decimal ml-6 mt-2 mb-3;
+}
+
+ul {
+  @apply list-disc;
 }
