Simplify vertical height

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -39,21 +39,19 @@ pre {
 }
 
 html {
-  height: 100%;
-  position: relative;
+  height: 100dvh;
 }
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  height: 100%;
+  height: 100dvh;
   @apply text-gray-800 dark:text-gray-400 dark:bg-slate-900;
-  position: relative;
 }
 
 #___gatsby,
 #gatsby-focus-wrapper,
 #app-layout {
-  height: 100%;
+  height: 100dvh;
 }
 
 ol {
