--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -23,11 +23,11 @@ h1 {
 }
 
 h2 {
-  @apply text-2xl mt-8 mb-2 text-gray-700 dark:text-gray-300;
+  @apply text-2xl mt-8 mb-4 quicksand text-gray-700 dark:text-gray-300;
 }
 
 h3 {
-  @apply text-xl text-gray-700 dark:text-gray-300 mt-4 mb-2;
+  @apply text-xl quicksand text-gray-700 dark:text-gray-300 mt-4 mb-2;
 }
 
 h4 {
